--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
-    "react-sticky": "^6.0.1"
+    "react-sticky": "^6.0.1",
+    "ws": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
