--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "proxy": "http://localhost:1234"
+  "proxy": "http://localhost:1234",
+  "devDependencies": {
+    "jest": "^21.2.1",
+    "supertest": "^3.0.0"
+  }
 }
